--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
         <div class="headerBox">
           <h1 class="formHeader">Congratulations!</h1>
         </div>
-        <form name="logoutForm" th:action="@{/logout}" method="post">
+        <form class="formContainer" name="logoutForm" th:action="@{/logout}" method="post">
           <p class="m-2 text-wrap ">There is only one thing left to do...</p>
           <button class="button">Sign Out</button>
         </form>
