--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/output.css" />
-    <script src="/js/profileUpdates.js" defer></script>
+    <script src="/js/fadeAnimations.js" defer></script>
   </head>
   <body>
     <header>
@@ -35,14 +35,22 @@
             <img class="h-20 w-20 rounded-full" th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}" alt="Profile Picture" />
           </a>
         </div>
+
+        <div class="errorBox">
+          <!-- SUCCESS MESSAGE -->
+          <div id="successMessageDiv" th:if="${message}" th:text="${message}" style="color: green;"></div>
+          <!-- ERROR MESSAGE -->
+          <div id="errorMessageDiv" th:if="${error}" th:text="${error}" style="color: red;"></div>
+        </div>
+
         <div class="flex flex-col justify-start items-start w-full">
           <div class="flex flex-col justify-start items-start p-2">
             <!-- Username -->
             <span class="text-md" th:text="${user?.username ?: 'Default Username'}"></span>
             <!-- Location -->
-            <h2 class="text-sm font-thin" th:text="${user?.location ?: 'Default location'}"></h2>
+            <h2 class="text-sm font-thin" th:text="${user?.location ?: 'Default Location'}"></h2>
             <!-- Biography -->
-            <p class="text-sm" th:text="${user?.biography ?: 'Default biography text goes here.'}"></p>
+            <p class="text-sm" th:text="${user?.biography ?: 'Default Biography'}"></p>
             <!-- Email -->
             <p class="text-sm font-thin" th:text="${user?.email ?: 'default@email.com'}"></p>
             <!-- Website -->
