--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
         </div>
 
         <div th:if="${message}" class="success" th:text="${message}"></div>
-        <form th:action="@{/login}" method="post">
+        <form class="formContainer" th:action="@{/login}" method="post">
           <div class="labelInputBox">
             <label class="label" for="Username">Username:</label>
             <input
