--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -30,7 +30,7 @@
           <div id="errorMessageDiv" th:if="${error}" th:text="${error}" style="color: red;"></div>
         </div>
 
-        <form th:action="@{/signup}" method="post">
+        <form class="formContainer" th:action="@{/signup}" method="post">
           <div class="labelInputBox">
           <label class="label" for="username">Username:</label>
           <input
