Refactor out CustomUserDetails, solve issue with fetching userProfilePhoto

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,7 +12,9 @@
       <nav class="navbar">
         <ul class="flex justify-center items-center w-full">
           <li>
-            <img class="h-5 " href="/index" src="/images/Shelved_Logo_White.png" alt="Shelved Logo" />
+            <a href="/index">
+              <img class="h-5" src="/images/Shelved_Logo_White.png" alt="Shelved Logo" />
+            </a>
           </li>
         </ul>
       </nav>
