--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -45,6 +45,16 @@
           />
           </div>
 
+          <label class="label" for="email">Email:</label>
+          <input
+            class="input"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email"
+            required
+          />
+
           <div class="labelInputBox">
           <label class="label" for="password">Password:</label>
           <input
