--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -31,7 +31,7 @@
 
         <div class="flex flex-col justify-center items-center pt-4 pb-2">
           <!-- profile image -->
-          <a href="/update-profile-photo">
+          <a href="/update-profile">
             <img class="h-20 w-20 rounded-full" th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}" alt="Profile Picture" />
           </a>
         </div>
