--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -45,6 +45,7 @@
           />
           </div>
 
+          <div class="labelInputBox">
           <label class="label" for="email">Email:</label>
           <input
             class="input"
@@ -54,6 +55,7 @@
             placeholder="Email"
             required
           />
+          </div>
 
           <div class="labelInputBox">
           <label class="label" for="password">Password:</label>
